# grocery_synthetic_data

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  LICENSE  README.md  README_PT.md  pyproject.toml  synthetic_grocery.ipynb  weather_conditions.py
data/processed/: product_seasonality.csv
