[project]
name = "grocery_synthetic_data"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Roberto Balbinotti", email = "rbalbinotti@gmail.com"},
]
dependencies = ["pandas>=2.3.3", "numpy>=2.4.1", "holidays>=0.88", "workalendar>=17.0.0", "scikit-learn>=1.8.0", "fastparquet>=2025.12.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.2",
    "nbformat>=5.10.4",
    "nbconvert>=7.16.6",
]
